@@ -1,3 +1,8 @@
+2012-06-13  David Shaw  <dshaw@jabberwocky.com>
+
+	* restore.c (restore): Fix problem with missing sigs on
+	regenerated key.
+
 2009-10-15  David Shaw  <dshaw@jabberwocky.com>
 
 	* NEWS, configure.ac: Post-release commit.
